Fixed landing page button scaling and header clipping on mobile

--- a/styles/home.css
+++ b/styles/home.css
@@ -41,7 +41,6 @@ video#games-reel {
 #reel-overlay-inner {
     display: inline-block;
     vertical-align: middle;
-    max-width: 40em;
     width: 99%;
     height: 20em;
     margin: 0 auto;
@@ -57,6 +56,7 @@ video#games-reel {
 #want-to-make-games {
     /* text-shadow: 2px 0 black, 0 2px black; */
     font-weight: 600;
+    margin-top: 5rem;
 }
 
 #reel-overlay-description {
@@ -66,15 +66,32 @@ video#games-reel {
     left: 27%;
 }
 
-#reel-overlay-buttons {
+#reel-overlay-buttons a {
     position: relative;
-    width: 120%;
-    left: -10%;
+    width: 50%;
     vertical-align: middle;
+    padding: 0;
 }
 
-#learn-more {
-    margin-right: 3em;
+#reel-overlay-buttons a button {
+    margin: 0.5em 0;
+    width: 80%;
+}
+
+/* The big buttons are 16/1.3em wide (for the buttons font-size is set to 1.3 
+   and the width of the button is changed to 16em.  em is based on font size
+   so the final size is 16/1.3=~12.3  So when the screen is at 16/1.3*2=24.61538,
+   we should switch the appearance of the buttons as they have gotten too small.
+   This is applied ONLY if the screen is larger than 16/13*2em */
+@media (min-width: 24.61538em) {
+    #reel-overlay-buttons a {
+        padding: 0 1.5em;
+    }
+
+    #reel-overlay-buttons a button {
+        width: 100%;
+        margin: auto;
+    }
 }
 
 /* #view-full-video-reel {
